webhooks/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-service
  namespace: kubehook
spec:
  selector:
    app: webhook-server
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
