webhooks/k8s/webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-configuration
webhooks:
  - name: mutate.webhook-service.svc
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
    clientConfig:
      service:
        name: webhook-service
        namespace: kubehook
        path: "/mutate"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKakNDQWc2Z0F3SUJBZ0lVY2o5NmhCbmZkK08vakxld0EyQk43VkFveUtBd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0p6RWxNQ01HQTFVRUF3d2NkMlZpYUc5dmF5MXpaWEoyYVdObExtdDFZbVZvYjI5ckxuTjJZekFlRncweQpNekEzTWpNeE16SXhORFphRncweU5EQTNNakl4TXpJeE5EWmFNQ2N4SlRBakJnTlZCQU1NSEhkbFltaHZiMnN0CmMyVnlkbWxqWlM1cmRXSmxhRzl2YXk1emRtTXdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUsKQW9JQkFRQ3Y2UEl6dGt6RUhGVFdXdG9kS0g0VUZBYWpOZ3V4MmFjWWM1bE1HNFRlRWNkVG5PVEdYeDNyb0UyaAoveGMyc2dpRVR [...]
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["", "apps"]
        apiVersions: ["v1"]
        resources: ["pods", "deployments"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook-configuration
webhooks:
  - name: validate.webhook-service.svc
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
    clientConfig:
      service:
        name: webhook-service
        namespace: kubehook
        path: "/validate"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKakNDQWc2Z0F3SUJBZ0lVY2o5NmhCbmZkK08vakxld0EyQk43VkFveUtBd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0p6RWxNQ01HQTFVRUF3d2NkMlZpYUc5dmF5MXpaWEoyYVdObExtdDFZbVZvYjI5ckxuTjJZekFlRncweQpNekEzTWpNeE16SXhORFphRncweU5EQTNNakl4TXpJeE5EWmFNQ2N4SlRBakJnTlZCQU1NSEhkbFltaHZiMnN0CmMyVnlkbWxqWlM1cmRXSmxhRzl2YXk1emRtTXdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUsKQW9JQkFRQ3Y2UEl6dGt6RUhGVFdXdG9kS0g0VUZBYWpOZ3V4MmFjWWM1bE1HNFRlRWNkVG5PVEdYeDNyb0UyaAoveGMyc2dpRVR [...]
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["", "apps"]
        apiVersions: ["v1"]
        resources: ["pods", "deployments"]
